fix 3 column on tablets

--- a/wp-content/themes/koelsch/assets/css/frontend.css
+++ b/wp-content/themes/koelsch/assets/css/frontend.css
@@ -2979,7 +2979,7 @@ address {
   background-size: cover;
   display: flex;
   justify-content: center;
-  background-position: 50% 10vh;
+  background-position: 50% 12vh;
   background-repeat: no-repeat;
   padding: 1px;
   min-height: calc(100vh - 90px);
@@ -5895,6 +5895,8 @@ figure.wp-block-image {
         font-size: 2.5rem; }
       .find-panel h4 br {
         display: none; }
+    .wp-block-columns .wp-block-column:last-child:nth-child(odd) {
+      flex-grow: 1 !important; }
     .flex-row .col.col-nav {
       padding-left: 5px;
       padding-right: 5px; } }
