--- a/wp-content/themes/koelsch/develop/scss/layout/_blocks.scss
+++ b/wp-content/themes/koelsch/develop/scss/layout/_blocks.scss
@@ -15,6 +15,14 @@
         margin-bottom:0;
       }
 
+      &:nth-child(odd){
+
+        @include media('<tablet'){
+          flex-grow:1!important;
+        }
+
+      }
+
     }
     &>.text-col{
 
